# pyrag

./: .gitignore  Justfile  README.md  pyproject.toml
infra/: docker-compose.yaml  example.config.toml  example.config.toml.toml
src/pyrag/: config.py  infra.py  main.py  presentation.py
src/pyrag/infra/: logging.py
src/pyrag/infra/openai/: embedder.py  llm.py  provider.py
src/pyrag/infra/parsers/: html.py  pdf.py  provider.py  splitter.py
src/pyrag/infra/qdrant/: provider.py  qdrant.py
src/pyrag/main/: __init__.py  di.py  web.py
src/pyrag/presentation/: setup.py
src/pyrag/presentation/knowledge_base/: crud.py
src/pyrag/presentation/llm/: request.py
