[project]
name = "pyrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adaptix>=3.0.0b11",
    "dishka>=1.7.2",
    "fastapi>=0.121.3",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.8.1",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.0",
    "ruff>=0.14.6",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
]


[dependency-groups]
dev = [
    "pyrag",
]


[tool.setuptools]
package-dir = { "" = "src" }
[tool.uv]
package=true
[tool.uv.sources]
pyrag = { workspace = true }

[tool.ruff]
line-length = 79

[tool.ruff.lint]

select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # maccabe
    "COM",  # flake8-commas
    "D",    # pydocstyle
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle
    "ERA",  # flake8-eradicate
    "EXE",  # flake8-executable
    "F",    # pyflakes
    "FBT",  # flake8-boolean-trap
    "FLY",  # pyflint
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "N",    # pep8-naming
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff
    "S",    # flake8-bandit
    "SIM",  # flake8-simpify
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "T100", # flake8-debugger
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
    "FAST", # fastapi
    "ANN",  # annotations
    "BLE",  # blind exceptions
    "INP",  # implicit package (w/o __init__)
    "TID",  # tidy-imports (relatives especially)
    "TD",   # TODOs
]
ignore = [
    "A005",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",  
    "D203",
    "D212",
    "D401",
    "D404",
    "D405",
    "PLR09",  
    "PLR2004", 
    "PLR6301",

    "N818",
    

    "RUF001", 
    "RUF002",
    "RUF003",  


    "ANN401", 

    "TD002", 
    "TD003", 
    "RUF100", 
    "COM812",
]
external = ["WPS"]
